--- a/modules/ROOT/pages/depl-examples/container-setup.adoc
+++ b/modules/ROOT/pages/depl-examples/container-setup.adoc
@@ -90,7 +90,7 @@ If the group does not exist or you are not a member, continue with {docker-post-
 
 To give some terminology guidance, images are unchangeable snapshots of live containers, while containers are running (or stopped) instances of an image.
 
-* To download the {docker_ocis_prod_url}[latest Infinite Scale image], run the following command. Note that this command will download the correct image suitable for your OS if available. For Windows, Infinite Scale Docker images are not available. If not explicitly declared otherwise, the _latest_ tag is implicitely used and always reflects the latest *production* version. If you want to test out a rolling release use `owncloud/ocis-rolling` instead:
+* To download the {docker_ocis_prod_url}[latest Infinite Scale image], run the following command. Note that this command will download the correct image suitable for your OS if available. For Windows, Infinite Scale Docker images are not available. If not explicitly declared otherwise, the _latest_ tag is implicitly used and always reflects the latest *production* version. If you want to test out a rolling release use `owncloud/ocis-rolling` instead:
 +
 [source,bash]
 ----
