--- a/modules/ROOT/pages/migration/upgrading_5.0.x_7.0.0.adoc
+++ b/modules/ROOT/pages/migration/upgrading_5.0.x_7.0.0.adoc
@@ -170,6 +170,26 @@ patch < ocis.config.patch
 Use one of the Docker based examples from above and derive from. 
 --
 
+== Changed or Added CLI Commands
+
+See the link for a detailed description of the respective CLI command if available. If a command has been backported to version 5, always use the latest production version of that release.
+
+* xref:maintenance/commands/commands.adoc#purge-expired-space-trash-bin-items[Purge Expired Space Trash-Bin Items]  +
+The `ocis storage-users uploads` got restructured. +
+The deprecated `list` option is now removed, the `clean` option is now part of the `sessons command`.
+
+* xref:maintenance/commands/commands.adoc#reset-password-for-idm-users[Reset Password for IDM Users] +
+The `ocis idm resetpassword` can now specify the user name via the `--user-name` (`-u`) flag.
+
+* A `health` command was added to each service: `ocis <service-name> health`.
+
+* xref:maintenance/commands/commands.adoc#trash-purge[Trash Purge]. +
+The `ocis trash purge-empty-dirs` command has been added.
+
+* xref:maintenance/commands/commands.adoc#revisions-cleanup[Revisions Cleanup] +
+The `ocis revisions purge` command allows removing revisions of files in the storage. +
+Note that this command has also been backported to version 5.
+
 == Deprecations
 
 * lets see what will come here
