--- a/modules/ROOT/pages/maintenance/commands/trash.adoc
+++ b/modules/ROOT/pages/maintenance/commands/trash.adoc
@@ -1,6 +1,6 @@
 = Trash CLI
 
-The trash cli command allows removing empty folders from the trashbin. This should be used to speed up trash bin operations.
+The trash CLI command allows removing empty folders from the trashbin. This should be used to speed up trash bin operations.
 
 [source,bash]
 ----
