--- a/modules/ROOT/pages/maintenance/commands/changed-cli.adoc
+++ b/modules/ROOT/pages/maintenance/commands/changed-cli.adoc
@@ -10,9 +10,17 @@
 
 See the link for a detailed description of the respective CLI command if available.
 
+* xref:maintenance/commands/commands.adoc#manage-expired-uploads[Manage Expired Uploads]  +
+The `ocis storage-users uploads sessions --restart` command got an alternative `--resume` option. +
+Resume can be used in the same way as `restart` with a slighly different behavior change.
+
 * xref:maintenance/commands/commands.adoc#purge-expired-space-trash-bin-items[Purge Expired Space Trash-Bin Items]  +
 The `ocis storage-users uploads` got restructured. +
 The deprecated `list` option is now removed, the `clean` option is now part of the `sessions command`.
+
+* xref:maintenance/commands/commands.adoc#resume-post-processing[Resume Post-Processing]  +
+The `ocis postprocessing restart` command got an alternative `resume` option. +
+Resume can be used in the same way as `restart` with a slighly different behavior change.
 
 * xref:maintenance/commands/commands.adoc#reset-password-for-idm-users[Reset Password for IDM Users] +
 The `ocis idm resetpassword` can now specify the user name via the `--user-name` (`-u`) flag.
